--- a/frontend/src/app/auth/auth.component.html
+++ b/frontend/src/app/auth/auth.component.html
@@ -1,21 +1,29 @@
-<div class="flex justify-center items-center p-10">
+<div class="flex flex-col gap-20 justify-center items-center p-10">
+  <!-- Logo area -->
+  <div class="w-2/12">
+    <img src="/assets/images/Gamify(1).png" alt="" />
+  </div>
+
+  <!-- Form area -->
   <form [formGroup]="logInForm" (ngSubmit)="onSubmit()" class="w-3/12">
     <!-- Email -->
     <div>
-      <mat-form-field appearance="fill" class="w-full" hideRequiredMarker="true">
+      <mat-form-field
+        appearance="fill"
+        class="w-full"
+        hideRequiredMarker="true"
+      >
         <mat-label>Email</mat-label>
         <input matInput formControlName="email" />
-        <mat-error
-          *ngIf="(logInForm.get('email')?.invalid && (logInForm.get('email')?.dirty || logInForm.get('email')?.touched)) && (logInForm.get('email')?.errors?.['required'])"
-          class=""
-          >Email cannot be empty</mat-error
-        >
-        <mat-error
-          *ngIf="(logInForm.get('email')?.invalid && (logInForm.get('email')?.dirty || logInForm.get('email')?.touched)) && (logInForm.get('email')?.errors?.['pattern'])"
-          >Please input email in the correct format</mat-error
-        >
+        @if (emailValid() === 'empty') {
+          <mat-error> Email cannot be empty </mat-error>
+        } @else if (emailValid() === 'format') {
+          <mat-error>Please input email in the correct <span class="underline cursor-pointer"  [matTooltip]="emailToolTipInstructions">format</span>.</mat-error>
+        }
       </mat-form-field>
-      <button mat-raised-button color="primary">Submit</button>
+      <button class="w-full mt-2" mat-raised-button color="primary" [disabled]="!logInForm.valid">
+        Punch in
+      </button>
     </div>
-  </form>  
+  </form>
 </div>
