punch in success with jwt

--- a/frontend/src/app/add/add.component.html
+++ b/frontend/src/app/add/add.component.html
@@ -71,10 +71,10 @@
         </button>
         <div class="w-full flex justify-end">
           <div
-            [routerLink]="['/auth']"
+            [routerLink]="['/punch-in']"
             class="underline mt-2 text-stone-700 cursor-pointer"
           >
-            Log in
+            Punch in
           </div>
         </div>
       </div>
