--- a/frontend/src/app/auth/auth.component.html
+++ b/frontend/src/app/auth/auth.component.html
@@ -42,7 +42,7 @@
           Punch in
         </button>
         <div class="w-full flex justify-end">
-          <div [routerLink]="['/add']" class="underline mt-2 text-stone-700 cursor-pointer">Register</div>
+          <div [routerLink]="['/register']" class="underline mt-2 text-stone-700 cursor-pointer">Register</div>
         </div>
       </div>
     </form>
