--- a/frontend/src/styles.scss
+++ b/frontend/src/styles.scss
@@ -1,7 +1,14 @@
 /* You can add global styles to this file, and also import other style files */
+@import url('https://fonts.googleapis.com/css2?family=Jost:wght@400;600&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Jost:wght@400;600&family=Outfit:wght@500&display=swap');
 
 html, body { height: 100%; }
-body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+body { margin: 0; font-family: 'Jost', sans-serif; }
+* {
+  font-family: 'Jost', sans-serif;
+  font-family: 'Jost', sans-serif;
+  font-family: 'Outfit', sans-serif;
+}
 
 .material-symbols-rounded {
   font-variation-settings:
