task add complete

--- a/frontend/src/app/auth/fail-snack.html
+++ b/frontend/src/app/auth/fail-snack.html
@@ -1,7 +1,7 @@
-<span class="example-pizza-party" matSnackBarLabel>
+<span class="" matSnackBarLabel>
   User not exists.
 </span>
 <span matSnackBarActions>
-  <button mat-button matSnackBarAction (click)="close()">Try Again</button>
+  <button mat-button matSnackBarAction (click)="close()"><div class="text-white">Try again</div></button>
 </span>
 
