--- a/frontend/src/app/add/success-snack.html
+++ b/frontend/src/app/add/success-snack.html
@@ -1,7 +1,7 @@
-<span class="example-pizza-party" matSnackBarLabel>
+<span class="" matSnackBarLabel>
   Registration success, you can log in.
 </span>
 <span matSnackBarActions>
-  <button mat-button matSnackBarAction (click)="close()">Close</button>
+  <button mat-button matSnackBarAction (click)="close()"><div class="text-white">Close</div></button>
 </span>
 
