--- a/frontend/src/app/admin/task/new/new.component.html
+++ b/frontend/src/app/admin/task/new/new.component.html
@@ -66,6 +66,7 @@
         </div>
 
         <button
+          type="submit"
           class="w-full mt-2"
           mat-raised-button
           color="primary"
