--- a/frontend/src/app/admin/task/task.component.html
+++ b/frontend/src/app/admin/task/task.component.html
@@ -1,3 +1,25 @@
-<button mat-button color="primary" [routerLink]="['/admin/task/new']">
-  <div class="flex items-center gap-2">Add new activity <span class="material-symbols-rounded"> add </span></div>
-</button>
+<div class="flex justify-center">
+  <div class="w-10/12 lg:w-5/12">
+    <div class="w-6/12 md:w-4/12 lg:w-2/12"><img src="/assets/images/Tasks list.png" alt=""></div>
+    <div class="w-full flex justify-end">
+      <button mat-button color="primary" [routerLink]="['/admin/task/new']">
+        <div class="flex items-center gap-2">Add new activity <span class="material-symbols-rounded"> add </span></div>
+      </button>
+    </div>
+    
+    <div class="mb-4 text-lg">Activities list</div>
+    @for (activity of activities; track activity.activityName; let idx = $index) {
+      <mat-card class="mb-2 p-6 cursor-pointer">
+        <div class="flex justify-between">
+          <div class="flex gap-2 items-end">
+            <div>{{ idx + 1 }}.</div><div>{{ activity.activityName | capitalize }}</div>
+          </div>
+          <div class="flex gap-2 items-center"><span class="material-symbols-rounded text-lg text-yellow-400">
+            stars
+            </span><div>{{ activity.points }}</div></div>
+        </div>
+      </mat-card>
+    }
+    
+  </div>
+</div>
