--- a/frontend/src/app/admin/task/edit/edit.component.html
+++ b/frontend/src/app/admin/task/edit/edit.component.html
@@ -70,7 +70,7 @@
           class="w-full mt-2"
           mat-raised-button
           color="primary"
-          [disabled]="!taskForm.valid"
+          [disabled]="buttonValid()"
         >
           Edit activity
         </button>
