--- a/frontend/src/app/admin/task/task.component.html
+++ b/frontend/src/app/admin/task/task.component.html
@@ -1,6 +1,6 @@
 <div class="flex justify-center">
   <div class="w-10/12 lg:w-5/12">
-    <div class="w-6/12 md:w-4/12 lg:w-3p/12"><img src="/assets/images/Tasks list.png" alt=""></div>
+    <div class="w-6/12 md:w-4/12 lg:w-3/12"><img src="/assets/images/Tasks list.png" alt=""></div>
     <div class="w-full flex justify-end">
       <button mat-button color="primary" [routerLink]="['/admin/task/new']">
         <div class="flex items-center gap-2">Add new activity <span class="material-symbols-rounded"> add </span></div>
