--- a/frontend/src/app/admin/task/edit/edit.component.html
+++ b/frontend/src/app/admin/task/edit/edit.component.html
@@ -1,4 +1,4 @@
-<div class="flex justify-center h-full">
+<div class="flex justify-center h-full mt-16">
   <div class="md:w-8/12 w-11/12 lg:w-4/12 mt-6 flex flex-col gap-10">
     <!-- top -->
     <div class="flex justify-center w-full flex-col items-start">
