--- a/frontend/src/app/user-tool-bar/user-tool-bar.component.html
+++ b/frontend/src/app/user-tool-bar/user-tool-bar.component.html
@@ -1,4 +1,4 @@
-<mat-toolbar>
+<mat-toolbar class="fixed top-0">
   <div class="flex justify-between w-full items-center">
     <div class="flex gap-2 items-center">
       <span>Employee</span>
