--- a/frontend/src/app/admin/ranking/ranking.component.html
+++ b/frontend/src/app/admin/ranking/ranking.component.html
@@ -1,23 +1,30 @@
-<div class="flex justify-center w-full pt-10 flex-col items-center">
+<div class="flex justify-center w-full pt-10 flex-col items-center mt-16">
   <div class="w-6/12 md:w-4/12 lg:w-1/12">
     <img src="/assets/images/Reward.png" alt="" />
   </div>
   <div class="mb-4 text-xl mt-10 text-orange-400">Ranking</div>
   <div class="w-6/12 flex justify-end">
     <mat-form-field>
-      <input matInput [matDatepicker]="dp" placeholder="Month and Year" [formControl]="date">
+      <input
+        matInput
+        [matDatepicker]="dp"
+        placeholder="Month and Year"
+        [formControl]="date"
+      />
       <mat-datepicker-toggle matSuffix [for]="dp"></mat-datepicker-toggle>
-      <mat-datepicker #dp
-                      startView="multi-year"
-                      (yearSelected)="chosenYearHandler($event)"
-                      (monthSelected)="chosenMonthHandler($event, dp)"
-                      panelClass="example-month-picker">
+      <mat-datepicker
+        #dp
+        startView="multi-year"
+        (yearSelected)="chosenYearHandler($event)"
+        (monthSelected)="chosenMonthHandler($event, dp)"
+        panelClass="example-month-picker"
+      >
       </mat-datepicker>
     </mat-form-field>
-    
   </div>
+  @if (ranking[0]) {
 
-  <div class="w-6/12 flex flex-col gap-2">
+  <div class="w-6/12 flex flex-col gap-2 mb-10">
     @for (item of ranking; track item.employeeId; let idx = $index) {
     <mat-card>
       <div class="flex justify-between w-full p-6 cursor-pointer">
@@ -26,13 +33,22 @@
           <div>{{ item.name | capitalize }}</div>
         </div>
         <div class="flex gap-2 items-center">
+          <div>{{ item.totalPoints }}</div>
           <span class="material-symbols-rounded text-lg text-yellow-400">
             stars
           </span>
-          <div>{{ item.totalPoints }}</div>
         </div>
       </div>
     </mat-card>
     }
   </div>
+} @else {
+<div class="w-full flex h-full justify-center flex-col items-center">
+  <div class="w-2/12">
+    <img src="/assets/images/nothing.png" alt="" />
+  </div>
+  <div class="text-sm">Nothing to show for this month</div>
 </div>
+}
+</div>
+
