--- a/frontend/src/app/admin/task/task.component.html
+++ b/frontend/src/app/admin/task/task.component.html
@@ -3,7 +3,7 @@
     <mat-spinner strokeWidth="6" diameter="44"></mat-spinner>
   </div>
 } @else {
-  <div class="flex justify-center">
+  <div class="flex justify-center mt-16">
     <div class="w-10/12 lg:w-5/12">
       <div class="w-6/12 md:w-4/12 lg:w-3/12"><img src="/assets/images/Tasks list.png" alt=""></div>
       <div class="w-full flex justify-end">
