--- a/frontend/src/app/toolbar/toolbar.component.html
+++ b/frontend/src/app/toolbar/toolbar.component.html
@@ -1,4 +1,4 @@
-<mat-toolbar>
+<mat-toolbar class="fixed top-0">
   <button mat-icon-button class="example-icon" aria-label="Example icon-button with menu icon">
   </button>
   <span>Admin</span>
