--- a/frontend/src/app/admin/ranking/ranking.component.html
+++ b/frontend/src/app/admin/ranking/ranking.component.html
@@ -26,7 +26,7 @@
 
   <div class="w-6/12 flex flex-col gap-2 mb-10">
     @for (item of ranking; track item.employeeId; let idx = $index) {
-    <mat-card>
+    <mat-card (click)="goToBreakDown(item.employeeId)">
       <div class="flex justify-between w-full p-6 cursor-pointer">
         <div class="flex gap-2">
           <div>{{ idx + 1 }}.</div>
