--- a/frontend/src/app/employee/home/home.component.html
+++ b/frontend/src/app/employee/home/home.component.html
@@ -1,10 +1,10 @@
 <app-user-tool-bar></app-user-tool-bar>
 @if (!activities) {
-  <div class="flex justify-center items-center h-full w-full">
+  <div class="flex justify-center items-center h-full w-full mt-16">
     <mat-spinner strokeWidth="6" diameter="44"></mat-spinner>
   </div>
 } @else {
-  <div class="flex justify-center">
+  <div class="flex justify-center mt-16">
     <div class="w-10/12 lg:w-5/12">
       <div class="w-6/12 md:w-4/12 lg:w-3/12"><img src="/assets/images/Tasks list.png" alt=""></div>
       
